1/30/2011 Added VoidFunction1.Null, a no-op implementation with no side effects
1/30/2011 Rewrote PropertyCheckBox and PropertyRadioButton to use more general parameter type SettableProperty instead of concrete subclass Property
1/25/2011 Set the slider in IntensitySlider to paint ticks, see #2682 for motivation and details.
1/24/2011 Added getters and setters to Time Speed Slider classes
1/16/2011 Made Property.getInitialValue protected to keep the API for Property as simple as possible for typical usage,
    but possible to override for applications which require knowledge about the initial value such as Gravity and Orbits
1/12/2011 Added the capability to send out notifications before PhetApplication exits, see PhetExit
1/7/2011 #2624, new credits logo from KSU
1/7/2011 #2624, change KSU credits logo from PNG to medium JPG compression, decreases file size to 18K, still looks good
1/7/2011 #2624, change request: reduce size of KSU credits logo by 25%
1/7/2011 Updated copyright text and dates for phetcommon, see #2630
1/7/2011 ModelViewTransform: added viewToModel(Shape) and factored out transform inversion code
1/4/2011 added double buffering for the AWT splash screen, see #2617
1/3/2011 #2624, display KSU credits window during sim launch sequence
1/3/2011 deprecated SwingUtils.centerDialogInParent, use more general SwingUtils.centerInParent
1/3/2011 #2624, add ability to suppress warning when optional localized strings are missing
1/3/2011 #2624, Credits dialog: read credits from translated strings file, fix hyperlinks, add KSU-specific code
1/3/2011 #2640, update About dialog copyright to 2011
12-30-2010: #2624, major rewrite of CreditsDialog (messy, difficult to extend), added stubs for Translation credits
12-23-2010: in Property<T>, changed defaultValue to initialValue, and made getInitialValue public
12-21-2010: #2623, factor out common behavior for "Reset All" into ResetAllDelegate